# entombed-gba

./: .editorconfig  .gitignore  CMakeLists.txt  Compiling EntombedGBA notes.txt  Controls & Tips.txt  ENTOMBED (Original game instructions).txt  README.md  makefile
.github/workflows/: ci.yml
ext/: fade.c  fade.h  itoa.cpp  itoa.h
gfx/: _READ FIRST.txt  gfx.bat
include/: enemies.h  fade.h  fader.h  gameDefines.h  globalvars.h  guns.h  highscore_entry.h  level.h  level_data.h  level_selector.h  main.h  map.h  moving_blocks.h  moving_platforms.h  objPropertiesLUT.h  player.h  projectiles.h  sequences.h  sfx.h  soundbank.h  text.h  title.h  utils.h
include/gfx/: entombed_font.h  pal_bg.h  pal_oam.h  spr_blocks.h  spr_coinscores.h  spr_digits.h  spr_enemies.h  spr_gameover.h  spr_levelselect.h  spr_misc.h  spr_platform.h  spr_player.h  spr_projectiles.h  spr_title.h  spr_urn.h  tilemap_fixtures.h  tilemap_walls.h
sound/: _READ FIRST.txt  sound.bat
src/: enemies.cpp  enemies.h  fade.c  fader.cpp  gameDefines.h  guns.cpp  guns.h  highscore_entry.cpp  highscore_entry.h  layer2tileLUT.c  level.cpp  level.h  level_selector.cpp  level_selector.h  main.cpp  main.h  map.cpp  moving_blocks.cpp  moving_blocks.h  moving_platforms.cpp  moving_platforms.h  objPropertiesLUT.c  player.cpp  player.h  projectiles.cpp  projectiles.h  sequences.cpp  sequences.h  sfx.cpp  soundbank.s  text.c  text.cpp  text.h  title.cpp  title.h  utils.cpp
src/gfx/: entombed_font.c  pal_bg.c  pal_oam.c  spr_blocks.c  spr_coinscores.c  spr_digits.c  spr_enemies.c  spr_gameover.c  spr_levelselect.c  spr_misc.c  spr_platform.c  spr_player.c  spr_projectiles.c  spr_title.c  spr_urn.c  tilemap_fixtures.c  tilemap_walls.c
